Fix 4 bugs
- Fixes
Cards would be to tall to fit on screen when aspect ratio is greater than 1.6
Hotkey to hide settings would trigger when typing in textboxes
On narrow screens, the counter would overlap with the channel name
Comma and negative sign not changing color when odometer update colors are set

--- a/top50/index.css
+++ b/top50/index.css
@@ -33,7 +33,7 @@ label,h1,h2,h3,h4,h5,h6,p {
 }
 
 .card {
-  height: 5.5vw;
+  height: 4.25vw;
   padding: 0.1vw;
   margin: 0.2vw;
   text-align: left;
@@ -57,7 +57,7 @@ label,h1,h2,h3,h4,h5,h6,p {
   font-size: 2vw;
   font-family: 'Roboto', sans-serif;
   padding-left: 0.2vw;
-  margin-top: calc(1vw - 2vh);
+  margin-top: 0;
   src: url('../../fonts/Roboto-Regular.ttf') format('truetype');
 }
 
